<package format="2">
  <name>agv3_varo</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for agv3_varo</p>
    <p>This package contains configuration data, 3D models and launch files
for agv3_varo robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>